2001-08-14  Sam Steingold  <sds@gnu.org>

	* .gdbinit: set args and define zout

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* hashtabl.d (SXHASH): Perform 32-bit -> 24-bit mapping by dividing
	through 0xFFFFFF. This does not show bad patterns mod 255.

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* package.d (export_symbol_from): Fix GC safety bug.

2001-08-13  Sam Steingold  <sds@gnu.org>

	use unix file utilities and forward slashes with win32gcc
	* makemake.in (H_DOS): DOS-style filenames and file utilities

2001-08-04  Bruno Haible  <haible@clisp.cons.org>

	* eval.d (check_for_illegal_keywords): Don't signal an error for
	((LAMBDA (&KEY X) X) :X 1 :ALLOW-OTHER-KEYS NIL :ALLOW-OTHER-KEYS NIL)

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	Make it possible again to build clisp with the CFLAGS option "-x c++".
	* autoconf/acspecific.m4 (AC_C_INLINE): Add explicit return type to
	declaration.
	* lispbibl.d (export): Define.
	(strmflags_rd_by_bit_B, strmflags_wr_by_bit_B, strmflags_rd_by_B,
	strmflags_wr_by_B, strmflags_rd_B, strmflags_wr_B): New macros, moved
	from stream.d.
	(input_stream_p, output_stream_p): Remove declarations.
	* spvwtabs.d (export): Undefine.
	* stream.d (strmflags_rd_by_bit_B, strmflags_wr_by_bit_B,
	strmflags_rd_by_B, strmflags_wr_by_B, strmflags_rd_B, strmflags_wr_B):
	Commented out. Now in lispbibl.d.
	(input_stream_p, output_stream_p): Make local.
	(rd_by_aux_icx_buffered): Bracify so that 'goto eof' doesn't jump into
	uninitialized variables.
	(MAKE-PIPE-INPUT-STREAM): Pass a real direction_t to
	make_unbuffered_stream and make_buffered_stream.
	(MAKE-PIPE-OUTPUT-STREAM): Likewise.
	(MAKE-PIPE-IO-STREAM): Likewise.
	(SYS::MAKE-SOCKET-STREAM): Likewise.
	(make_socket_stream): Likewise.
	(sec_usec): Fix declaration so that "ansidecl" recognizes it.
	(make_terminal_io): Pass a real direction_t to make_file_stream.
	(init_streamvars): Pass a real direction_t to make_unbuffered_stream.